cluster/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-routes
  namespace: default
spec:
  parentRefs:
  - name: web-gw
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.nginx.org
        kind: SnippetsFilter
        name: ssi-on
    backendRefs:
    - name: efferent-web
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /layout/
    backendRefs:
    - name: layout-web
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /social-feed/
    backendRefs:
    - name: social-feed-web
      port: 80
